Nav z-index fixed

--- a/POLMED/src/styles/layout/_navigation.scss
+++ b/POLMED/src/styles/layout/_navigation.scss
@@ -180,6 +180,7 @@
   .nav {
     @include flex(row, space-between);
     padding: 1em 1.5em;
+    z-index: 99;
   }
   .nav-logo {
     height: 3.2em;
